Apply feedback from PR